# bliss

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
bliss/: catalog.py  grid.py  plotting.py  render_tiles.py  reporting.py  training_functions.py
bliss/datasets/: central_sim.py  galsim_blends.py  generate_blends.py  generate_galaxies.py  generate_individual.py  io.py  lsst.py  noise.py  padded_tiles.py  pair_sim.py  saved_datasets.py  table_utils.py
bliss/encoders/: autoencoder.py  binary.py  deblend.py  detection.py  encoder.py  layers.py
case_studies/galsim_galaxies/: get_ae_datasets.py  get_figures.py  get_testing_datasets.py
case_studies/galsim_galaxies/models/: autoencoder.pt  deblend.pt
case_studies/galsim_galaxies/notebooks/: debug-deblender.ipynb  debug-deblender2.ipynb  individual-galaxy-info-v1.ipynb  test-shift-ptiles-fnc.ipynb  why-is-ellipticity-not-symmetric.ipynb
case_studies/galsim_galaxies/run/: log.md  log.txt  run_autoencoder.sh  run_binary.sh  run_deblender.sh  run_detection1.sh  run_detection_train.py  training_functions.py
case_studies/galsim_galaxies/scripts_figures/: ae_figures.py  blend_figures.py  toy_figures.py
data/: small_cat.fits
experiment/: README.md  __init__.py  get_blends_datasets.py  get_figures.py  get_model_from_checkpoint.py  get_single_galaxies_datasets.py  get_tiles_datasets.py  log.txt  log_long.txt  make_central_sim_samples_results.py  make_datasets.py  make_figures.py  make_pair_sim_samples_results.py  run_figures.sh  train_models.py
experiment/models/: autoencoder.pt  autoencoder_52.pt  binary_23_22.pt  binary_52.pt  deblender_52.pt  detection_52.pt
experiment/notebooks/explore/: central-sim-results1.ipynb  (+12 more)
experiment/run/: log.txt  run_autoencoder.sh  run_binary.sh  run_deblender.sh  run_detection.sh  train_all.sh  training_functions.py
experiment/scripts/: get_figures.py  get_model_from_checkpoint.py
experiment/scripts_figures/: ae_figures.py  binary_figures.py  blend_figures.py  deblend_figures.py  detection_figures.py  sampling_figure.py  sampling_score_figure.py  toy_figures.py  toy_sampling_figures.py
tests/: test_encoder_forward.py  test_galaxy_blend_dataset.py  test_grid.py  test_individual_galaxy_dataset.py  test_metrics.py  test_render_ptiles.py
(+15 files in other folders)
